<link> with non-CSS type should not be retrieved https://bugs.webkit.org/show_bug.cgi?id=88157

Patch by Rob Buis <rbuis@igalia.com> on 2020-01-03
Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Import test for various type attribute values for rel=stylesheet link elements.

* web-platform-tests/html/semantics/document-metadata/the-link-element/link-type-attribute-expected.html: Added.
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-type-attribute.html: Added.
* web-platform-tests/html/semantics/document-metadata/the-link-element/w3c-import.log:

Source/WebCore:

If the UA does not support the given MIME type for the given link
relationship, then the UA should not fetch and process the linked
resource [1].

The behavior matches Chrome and Firefox.

[1] https://html.spec.whatwg.org/multipage/semantics.html#processing-the-type-attribute

Test: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-link-element/link-type-attribute.html

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::process):

Canonical link: https://commits.webkit.org/218868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253992 268f45cc-cd09-0410-ab3c-d52691b4dbfc